--- a/src/app/main-page/contact/contact.component.scss
+++ b/src/app/main-page/contact/contact.component.scss
@@ -3,7 +3,6 @@
 @media screen and (max-width: 576px) {
     .container-fluid {
         width: 100% !important;
-        transition: 1s !important;
 
         .row {
             transition: 1s;
@@ -48,13 +47,13 @@
 }
 
 .container-fluid {
-    transition: 1s;
     text-align: center;
     padding: 4%;
     width: 35%;
     text-transform: capitalize;
     font-family: MavenPro;
     transition: 1s;
+    margin-right: unset;
 
     .row {
         transition: 1s;
@@ -74,9 +73,7 @@
 
                         input {
                             transition: 1s;
-                            background-color: $nextone-color-light-gray;
                             width: 100%;
-                            text-transform: capitalize;
                             padding: 4%;
                             text-align: center;
                             border-radius: 5px;
@@ -91,30 +88,12 @@
 
                         textarea {
                             transition: 1s;
-                            background-color: $nextone-color-light-gray ;
                             width: 100%;
                             border: none;
                             border-radius: 10px;
                             text-transform: capitalize;
                             font-size: medium;
                             text-align: center;
-                        }
-
-                        button {
-                            border-radius: 5px;
-                            border: none;
-                            text-transform: capitalize;
-                            padding: 2%;
-                            font-size: medium;
-                            transition: .3s;
-                            width: 100%;
-                        }
-
-                        button:hover {
-                            background-color: $nextone-color-black;
-                            box-shadow: $nextone-box-shadow-black;
-                            color: $nextone-color-white;
-                            transition: .3s;
                         }
                     }
                 }
@@ -125,4 +104,13 @@
 
 hr{
     margin: 0;
+}
+
+.form-error{
+    color: red;
+}
+.outer-content{
+    height: 100%;
+    width: 100%;
+    background: beige;
 }
